renamed the divs

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -36,10 +36,10 @@
       <div class="panel-body">
         <div class="row">
           <div class="col-md-6">
-            {{ div.Red|safe }}
+            {{ div.MonthlySpend|safe }}
           </div>
           <div class="col-md-6">
-            {{ div.Blue|safe }}
+            {{ div.CumulativeSpend|safe }}
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
           <div class="col-md-6">
           </div>
           <div class="col-md-6">
-            {{ div.Green|safe }}
+            {{ div.ForecastFTE|safe }}
           </div>
         </div>
       </div>
