--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -25,7 +25,13 @@
         <h3 class="panel-title text-center">Claim for Crown Court Defence</h3>
       </div>
       <div class="panel-body">
-        Panel content
+        <div class="row">
+          <div class="col-md-6">
+          </div>
+          <div class="col-md-6">
+            {{ div.Timeline|safe }}
+          </div>
+        </div>
       </div>
     </div>
 
