--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -26,9 +26,35 @@
       </div>
       <div class="panel-body">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-md-4">
+            <table class="table table-hover">
+              <tr>
+                <th class="active">Today</th>
+                <td class="h4">{{ today }}</td>
+              </tr>
+              <tr>
+                <th class="active">Current phase</th>
+                <td class="danger">Beta</td>
+              </tr>
+              <tr>
+                <th class="active">Service Area</th>
+                <td>LAA</td>
+              </tr>
+              <tr>
+                <th class="active">Service Manager</th>
+                <td>Liz Citron</td>
+              </tr>
+              <tr>
+                <th class="active">Product Manager</th>
+                <td>Stuart Hollands</td>
+              </tr>
+              <tr>
+                <th class="active">Delivery Manager</th>
+                <td>Rob Stirling</td>
+              </tr>
+            </table>
           </div>
-          <div class="col-md-6">
+          <div class="col-md-8">
             {{ div.Timeline|safe }}
           </div>
         </div>
