Style login page

--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -11,6 +11,7 @@
 {% block stylesheets %}
 
     <link href="{% static 'prototype/moj_template_overrides.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'prototype/main.css' %}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
 
