--- a/dashboard/templates/registration/login.html
+++ b/dashboard/templates/registration/login.html
@@ -1,25 +1,28 @@
-{#{% extends "service_status/common.html" %}#}
+{% extends "common.html" %}
+
+{% load staticfiles %}
 
 {% block content %}
 
-<div style="width: 200px; margin-left: auto; margin-right: auto;">
+<div class="login_column">
 
   <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
     {% csrf_token %}
     <table>
       <caption id="login_caption">Enter Login Details</caption>
 
-      <tr class="status_row">
+      <tr>
         <td class="password_cell">{{ form.username.label_tag }}</td>
         <td class="password_cell">{{ form.username }}</td>
       </tr>
-      <tr class="status_row">
+      <tr>
         <td class="password_cell">{{ form.password.label_tag }}</td>
         <td class="password_cell">{{ form.password }}</td>
       </tr>
     </table>
-
-    <input class="form_button" type="submit" value="login"/>
+    <div class="submit_container">
+        <input class="form_button" type="submit" value="login"/>
+    </div>
     <input type="hidden" name="next" value="{{ next }}"/>
   </form>
 
