--- a/dashboard/apps/prototype/static/prototype/main.css
+++ b/dashboard/apps/prototype/static/prototype/main.css
@@ -1,20 +1,20 @@
 
 
-.login_column {
+.login-column {
     margin: 20px auto;
     width: 200px;
 }
 
 /* Buttons */
 
-.submit_container {
+.submit-container {
     margin-right: 2px;
     margin-top: 4px;
     display: inline;
     float: right;
 }
 
-.form_button {
+.form-button {
     background-color: white;
     border: 2px solid #005ea5;
     color: #005ea5;
@@ -25,7 +25,7 @@
     cursor: pointer;
 }
 
-.form_button:hover {
+.form-button:hover {
     background-color: #005ea5;
     color: white;
 }
