--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -10,8 +10,8 @@
 
 {% block stylesheets %}
 
-    <link href="{% static 'prototype/moj_template_overrides.css' %}" rel="stylesheet" type="text/css"/>
-    <link href="{% static 'prototype/main.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'prototype/styles/moj_template_overrides.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'prototype/styles/main.css' %}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
 
