--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -15,6 +15,12 @@
 
 {% endblock %}
 
+{% block javascripts %}
+
+    <script src="https://cdn.plot.ly/plotly-1.10.2.min.js"></script>
+
+{% endblock %}
+
 {% block before_content %}
 <br>
 <br>
