--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -19,6 +19,7 @@
 
     <script src="https://cdn.plot.ly/plotly-1.10.2.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.2.3.js"></script>
+    <script src="{% static 'prototype/js/vendor/superagent.js' %}"></script>
     <script src="{% static 'prototype/js/main.js' %}"></script>
 
 {% endblock %}
