--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -1,4 +1,4 @@
-  {% extends 'common.html' %}
+{% extends 'common.html' %}
 
 {% load staticfiles %}
 
@@ -73,10 +73,10 @@
       </div>
       <div class="panel-body">
         <div class="row">
-          <div class="col-md-6" id="top_left">
+          <div class="col-md-6" id="fig_a">
 
           </div>
-          <div class="col-md-6" id="top_right">
+          <div class="col-md-6" id="fig_b">
 
           </div>
         </div>
@@ -89,9 +89,9 @@
       </div>
       <div class="panel-body">
         <div class="row">
-          <div class="col-md-6" id="bottom_left">
+          <div class="col-md-6" id="fig_c">
           </div>
-          <div class="col-md-6" id="bottom_right">
+          <div class="col-md-6" id="fig_d">
 
           </div>
         </div>
