Amend html ids & readme, include bundle.js, tidy deps

--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -17,7 +17,7 @@
 
 {% block javascripts %}
 
-    <script src="{% static 'prototype/js/bundle.js' %}"></script>
+    <script src="{% static 'prototype/js/dist/bundle.js' %}"></script>
 
 {% endblock %}
 
