--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -73,10 +73,10 @@
       </div>
       <div class="panel-body">
         <div class="row">
-          <div class="col-md-6" id="fig_a">
+          <div class="col-md-6" id="fig-a">
 
           </div>
-          <div class="col-md-6" id="fig_b">
+          <div class="col-md-6" id="fig-b">
 
           </div>
         </div>
@@ -89,9 +89,9 @@
       </div>
       <div class="panel-body">
         <div class="row">
-          <div class="col-md-6" id="fig_c">
+          <div class="col-md-6" id="fig-c">
           </div>
-          <div class="col-md-6" id="fig_d">
+          <div class="col-md-6" id="fig-d">
 
           </div>
         </div>
