--- a/dashboard/templates/simple.html
+++ b/dashboard/templates/simple.html
@@ -10,12 +10,12 @@
 
 {% block content %}
 
-    <div id="fig_a" ></div>
+    <div id="fig-a" ></div>
     <br>
-    <div id="fig_b" ></div>
+    <div id="fig-b" ></div>
     <br>
-    <div id="fig_c" ></div>
+    <div id="fig-c" ></div>
     <br>
-    <div id="fig_d" ></div>
+    <div id="fig-d" ></div>
 
 {%  endblock %}
