--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -21,7 +21,7 @@
 {%  endblock %}
 
 
-{% block content %}
+{% block main %}
     <!--[if lt IE 8]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -72,11 +72,11 @@
         <h3 class="panel-title">Expenditure</h3>
       </div>
       <div class="panel-body">
-        <div class="row">
-          <div class="col-md-6" id="fig-a">
+        <div class="grid-row">
+          <div class="column-one-half" id="fig-a">
 
           </div>
-          <div class="col-md-6" id="fig-b">
+          <div class="column-one-half" id="fig-b">
 
           </div>
         </div>
@@ -88,15 +88,13 @@
         <h3 class="panel-title">Contract Expirations &amp; Other Risks</h3>
       </div>
       <div class="panel-body">
-        <div class="row">
-          <div class="col-md-6" id="fig-c">
+        <div class="grid-row">
+          <div class="column-one-half" id="fig-c">
           </div>
-          <div class="col-md-6" id="fig-d">
+          <div class="column-one-half" id="fig-d">
 
           </div>
         </div>
       </div>
     </div>
-
 {%  endblock %}
-
