--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -8,14 +8,14 @@
     <![endif]-->
 
     <div class="column-one-quarter">
-      <label class="heading-medium" for="project-name"><strong>Project:</strong></label>
+      <label class="heading-medium" for="project-name"><strong>Project</strong></label>
     </div>
     <div class="column-three-quarters">
       <select id="projects">
         {% for area_name, projects in areas.items %}
           <optgroup label="{{ area_name }}">
           {% for id, name in projects.items %}
-            {% if id == project_id %}
+            {% if id == project.id %}
             <option value="{{ id }}" selected>{{ name }}</option>
             {% else %}
             <option value="{{ id }}">{{ name }}</option>
@@ -28,24 +28,28 @@
     <div class="panel">
       <table class="table table-hover">
         <tr>
-          <th>Current phase</th>
-          <td>Beta</td>
+          <th>Project Name</th>
+          <td>{{ project.name }}</td>
+        </tr>
+        <tr>
+          <th>Current Phase</th>
+          <td>???</td>
         </tr>
         <tr>
           <th>Service Area</th>
-          <td>LAA</td>
+          <td>{{ project.client.name }}</td>
         </tr>
         <tr>
           <th>Service Manager</th>
-          <td>Liz Citron</td>
+          <td>???</td>
         </tr>
         <tr>
           <th>Product Manager</th>
-          <td>Stuart Hollands</td>
+          <td>???</td>
         </tr>
         <tr>
           <th>Delivery Manager</th>
-          <td>Rob Stirling</td>
+          <td>{{ project.project_manager.name }}</td>
         </tr>
       </table>
     </div>
