frontend backend split

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -57,8 +57,9 @@
     <div class="panel">
       <h3 class="heading-medium">Expenditure</h3>
         <div class="grid-row">
-          <div class="column-one-half" id="fig-a"></div>
-          <div class="column-one-half" id="fig-b"></div>
+          <div id="fig-a"></div>
+          <!-- <div class="column-one-half" id="fig-a"></div> -->
+          <!-- <div class="column-one-half" id="fig-b"></div> -->
         </div>
     </div>
 
