Copy whole block to moj template

--- a/dashboard/apps/moj_admin/templates/moj_admin.html
+++ b/dashboard/apps/moj_admin/templates/moj_admin.html
@@ -24,5 +24,7 @@
 {% endblock %}
 
 {% block content %}
+    <div id="main-admin-col"></div>
+    <div id="right-admin-col"></div>
 
 {% endblock %}
