--- a/dashboard/apps/moj_admin/static/moj_admin/styles/gov-uk-elements-moj-admin.css
+++ b/dashboard/apps/moj_admin/static/moj_admin/styles/gov-uk-elements-moj-admin.css
@@ -1,3 +1,12 @@
+#main-admin-col {
+    width: 66%;
+    float: left;
+}
+
+#right-admin-col {
+    float: right;
+}
+
 table, table th, table td {
     font-size: 16px;
 }
