one less directory hierarchy

--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -10,12 +10,12 @@
 
 {% block stylesheets %}
 
-    <link href="{% static 'prototype/dist/styles.css' %}" rel="stylesheet" type="text/css"/>
+    <link href="{% static 'dist/prototype.css' %}" rel="stylesheet" type="text/css"/>
 
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{% static 'prototype/dist/bundle.js' %}"></script>
+    <script src="{% static 'dist/prototype.js' %}"></script>
 {% endblock %}
 
 {% block before_content %}
