--- a/dashboard/templates/admin/prototype/upload.html
+++ b/dashboard/templates/admin/prototype/upload.html
@@ -13,7 +13,7 @@
 {% block content %}
   <h1>Upload payroll</h1>
 
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
   <input type="submit" value="Upload payroll" />
