add button to update float

--- a/dashboard/templates/common.html
+++ b/dashboard/templates/common.html
@@ -25,6 +25,7 @@
 {% endblock %}
 
 {% block content %}
+  <button id="update-from-float" class="update-from-float button">Float sync</button>
   <!--TODO use main tag in moj template-->
   <main id="content" role="main">
     {% block main %}
