--- a/dashboard/apps/moj_admin/templates/moj_admin/base.html
+++ b/dashboard/apps/moj_admin/templates/moj_admin/base.html
@@ -40,6 +40,7 @@
     {% if has_permission %}
         <span id="user-name">{% firstof user.get_short_name user.get_username %}<span>
         <span id="user-links">
+            <a id="update-from-float" class="update-from-float">Float sync</a> |
         {% if site_url %}
             <a href="{{ site_url }}">View site</a> |
         {% endif %}
