--- a/dashboard/templates/portfolio.html
+++ b/dashboard/templates/portfolio.html
@@ -3,6 +3,5 @@
 {% load staticfiles %}
 
 {% block main %}
-  <label class="heading-medium"><strong>Portfolio</strong></label>
-  <div class="panel" id="projects"/>
+<div id="container" />
 {% endblock %}
