--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -142,10 +142,17 @@
         <div class="header-bar">
             {% block headerbar %}{% endblock %}
         </div>
+        <div class="nav-bar">
+            <ul>
+                <li><a>Product Overview</a></li>
+                <li><a>Service Overview</a></li>
+                <li><a>Portfolio Summary</a></li>
+                <li><a>Admin</a></li>
+            </ul>
+        </div>
     </div>
 </div>
 <!--end global-header-bar-->
-
 
 {% block before_content %}{% endblock %}
 
