--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -144,10 +144,10 @@
         </div>
         <div class="nav-bar">
             <ul>
-                <li><a>Product Overview</a></li>
-                <li><a>Service Overview</a></li>
-                <li><a>Portfolio Summary</a></li>
-                <li><a>Admin</a></li>
+                <li class="product"><a href="/projects/1">Product Overview</a></li>
+                <li class="service"><a href="/services/1">Service Overview</a></li>
+                <li class="portfolio"><a href="/portfolio">Portfolio Summary</a></li>
+                <li class="admin"><a href="/admin">Admin</a></li>
             </ul>
         </div>
     </div>
