--- a/dashboard/templates/portfolio.html
+++ b/dashboard/templates/portfolio.html
@@ -2,6 +2,8 @@
 
 {% load staticfiles %}
 
+{% block body_classes %}portfolio{% endblock %}
+
 {% block main %}
 <div id="container" />
 {% endblock %}
