--- a/dashboard/templates/service.html
+++ b/dashboard/templates/service.html
@@ -2,6 +2,8 @@
 
 {% load staticfiles %}
 
+{% block body_classes %}service{% endblock %}
+
 {% block main %}
     <div class="grid-row">
       <div class="column-one-quarter">
