--- a/dashboard/apps/prototype/static/common/common.css
+++ b/dashboard/apps/prototype/static/common/common.css
@@ -26,6 +26,35 @@
     }
 }
 
+div.header-wrapper {
+    text-align: center;
+}
+
+#proposition-name:hover {
+    text-decoration: none !important;
+}
+
+div.header-wrapper div.header-proposition {
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+}
+
+@media (min-width: 769px) {
+    #global-header.with-proposition .header-wrapper .header-proposition {
+    float: none;
+    width: 600px;
+    }
+}
+
+.header-logo {
+    visibility: hidden;
+}
+
+div.header-global {
+    display: none;
+}
+
 .nav-bar {
     margin: 0;
     background-color: #dee0e2;
@@ -50,13 +79,23 @@
     margin-right: 20px;
     border-style: solid;
     border-color: #dee0e2;
-    
+
 }
 
 body.admin li.admin, body.product li.product, body.portfolio li.portfolio, body.service li.service {
 
     border-bottom-color: #005ea5;
 
+}
+
+.nav-bar ul li a {
+    color: #000000;
+    text-decoration: none;
+}
+
+.nav-bar ul li a:visited {
+    color: #000000;
+    text-decoration: none;
 }
 
 
