time frame selector

--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -215,7 +215,7 @@
 
 {% block javascripts %}{% endblock %}
 
-<script type="text/javascript">$(moj.init);</script>
+<!-- <script type="text/javascript">$(moj.init);</script> -->
 <!--<![endif]-->
 
 {% block body_end %}{% endblock %}
