fix base template not showing content

--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -159,7 +159,7 @@
 <div id="wrapper" class="group">
     <section id="content" role="main">
 
-            {% block main %}
+            {% block content %}
             {% endblock %}
 
     </section>
