date range selector

--- a/dashboard/templates/project.html
+++ b/dashboard/templates/project.html
@@ -13,7 +13,7 @@
       <div class="column-one-quarter">
         <label class="heading-medium" for="project-name"><strong>Project</strong></label>
       </div>
-      <div class="column-three-quarters">
+      <div class="column-one-half">
         <select id="projects">
           {% for service_name, projects in services.items %}
             <optgroup label="{{ service_name }}">
