--- a/dashboard/templates/service.html
+++ b/dashboard/templates/service.html
@@ -9,7 +9,7 @@
       <div class="column-one-quarter">
         <label class="heading-medium" for="service-name"><strong>Service Area</strong></label>
       </div>
-      <div class="column-three-quarters">
+      <div class="column-one-half">
         <select id="services">
           {% for id, name in services.items %}
             {% if id == service.id %}
