update button style to upload payroll

--- a/dashboard/templates/admin/prototype/upload.html
+++ b/dashboard/templates/admin/prototype/upload.html
@@ -16,6 +16,6 @@
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-  <input type="submit" value="Upload payroll" />
+  <input class="button" type="submit" value="Upload payroll" />
   </form>
 {% endblock %}
