no hardcoded links to projects and services

--- a/dashboard/templates/moj_template_custom/moj_base.html
+++ b/dashboard/templates/moj_template_custom/moj_base.html
@@ -144,8 +144,8 @@
         </div>
         <div class="nav-bar">
             <ul>
-                <li class="product"><a href="/projects/1">Product Overview</a></li>
-                <li class="service"><a href="/services/1">Service Overview</a></li>
+                <li class="product"><a href="/projects/">Product Overview</a></li>
+                <li class="service"><a href="/services/">Service Overview</a></li>
                 <li class="portfolio"><a href="/portfolio">Portfolio Summary</a></li>
                 <li class="admin"><a href="/admin">Admin</a></li>
             </ul>
